Декоративные элементы. Часть 4

--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
 						<input id="date-departure" type="text" name="date-departure" value="24 июля 2016">
 						<label for="number-adult">Взрослые:</label>
 						<div class="count-of-people">
-							<span class="number-minus"></span>
+							<span class="number-minus qty-number"></span>
 							<input id="number-adult" type="number" name="number-adult" value="2">
-							<span class="number-plus"></span>
+							<span class="number-plus qty-number"></span>
 						</div>
 						<label for="number-children">Дети:</label>
 						<div class="count-of-people">
-							<span class="number-minus"></span>
+							<span class="number-minus qty-number"></span>
 							<input id="number-children" type="number" name="number-children" value="0">
-							<span class="number-plus"></span>
+							<span class="number-plus qty-number"></span>
 						</div>
 						<input type="submit" value="Найти">
 					</form>
