Вставил интерактивную карту

--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
 						<input type="submit" value="Найти">
 					</form>
 				</section>
-				<img src="img/map.jpg" min-width="768" min-height="593" alt="Карта">
+				<div class="maps">
+					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=ybHw2_Vxj5fop9Z0EmipvQc8IbtaJBjJ&amp;width=100%&amp;height=593&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
+				</div>
 			</main>
 		</div>
 		<footer class="main-footer index-footer">
