Доработка главного меню и Фильтра на внутренней странице

--- a/hotels.html
+++ b/hotels.html
@@ -34,7 +34,7 @@
 			</header>
 			<main class="container">
 				<section class="form-hotels">
-					<form class="selection-hotels" action="#" method="post">
+					<form class="selection-hotels" action="selection-hotels.html" method="post">
 						<div class="infrastructure">
 							<h2>Инфраструктура:</h2>
 							<div class="pool">
