--- a/index.html
+++ b/index.html
@@ -96,10 +96,16 @@
 					</p>
 					<h3 class="search-btn">Поиск гостиницы в Седоне</h3>
 					<form class="search" action="#" method="post">
-						<label for="date-arrival">Дата заезда:</label>
-						<input id="date-arrival" type="text" name="date-arrival" value="24 апреля 2016">
-						<label for="date-departure">Дата выезда:</label>
-						<input id="date-departure" type="text" name="date-departure" value="24 июля 2016">
+						<div class="selected-date">
+							<label for="date-arrival">Дата заезда:</label>
+							<input id="date-arrival" type="text" name="date-arrival" value="24 апреля 2016">
+							<span class="calendar"></span>
+						</div>
+						<div class="selected-date">
+							<label for="date-departure">Дата выезда:</label>
+							<input id="date-departure" type="text" name="date-departure" value="24 июля 2016">
+							<span class="calendar"></span>
+						</div>
 						<label for="number-adult">Взрослые:</label>
 						<div class="count-of-people">
 							<span class="number-minus qty-number"></span>
