--- a/index.html
+++ b/index.html
@@ -121,9 +121,7 @@
 						<input type="submit" value="Найти">
 					</form>
 				</section>
-				<div class="maps">
-					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=ybHw2_Vxj5fop9Z0EmipvQc8IbtaJBjJ&amp;width=100%&amp;height=593&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
-				</div>
+				<div class="maps" id="map"></div>
 			</main>
 		</div>
 		<footer class="main-footer index-footer">
@@ -141,5 +139,7 @@
 				</a>
 			</section>
 		</footer>
+		<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript" defer></script>
+		<script src="js/map.js" defer></script>
 	</body>
 </html>
