Создание единого спрайта. Часть 1

--- a/hotels.html
+++ b/hotels.html
@@ -181,7 +181,7 @@
 				</section>
 				<section class="footer-copyright">
 					<a class="btn" href="https://htmlacademy.ru">
-						<p>Website by</p>
+						<p class="html-academy">Website by</p>
 					</a>
 				</section>
 			</footer>
