--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
 					<div class="big-photo real-city"></div>
 				</section>
 				<section class="benefits">
-					<div class="benefits-text house">
-						<h3>Жилье</h3>
+					<div class="benefits-text">
+						<h3 class="house">Жилье</h3>
 						<p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
 					</div>
-					<div class="benefits-text food">
-						<h3>Еда</h3>
+					<div class="benefits-text">
+						<h3 class="food">Еда</h3>
 						<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
 					</div>
-					<div class="benefits-text souvenir">
-						<h3>Сувениры</h3>
+					<div class="benefits-text">
+						<h3 class="souvenir">Сувениры</h3>
 						<p>Не только китайского, но и местного производства!</p>
 					</div>
 				</section>
@@ -135,7 +135,7 @@
 			</section>
 			<section class="footer-copyright">
 				<a class="btn" href="https://htmlacademy.ru">
-					<p>Website by</p>
+					<p class="html-academy">Website by</p>
 				</a>
 			</section>
 		</footer>
