--- a/index.html
+++ b/index.html
@@ -90,11 +90,13 @@
 					</div>
 				</section>
 				<section class="interested">
-					<h2>Заинтересовались?</h2>
-					<p>Укажите предполагаемые даты поездки,<br>
-						И мы покажем вам лучшие предложения гостиниц в Седоне
-					</p>
-					<h3 class="search-btn">Поиск гостиницы в Седоне</h3>
+					<div class="wrapper">
+						<h2>Заинтересовались?</h2>
+						<p>Укажите предполагаемые даты поездки,<br>
+							И мы покажем вам лучшие предложения гостиниц в Седоне
+						</p>
+						<h3 class="search-btn">Поиск гостиницы в Седоне</h3>
+					</div>
 					<form class="search" action="#" method="post">
 						<div class="selected-date">
 							<label for="date-arrival">Дата заезда:</label>
@@ -140,6 +142,6 @@
 			</section>
 		</footer>
 		<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript" defer></script>
-		<script src="js/map.js" defer></script>
+		<script src="js/script.js" defer></script>
 	</body>
 </html>
