--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=cyrillic" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.min.css">
 		<title>HTML Academy: Седона</title>
 		</head>
 	<body>
@@ -100,24 +100,24 @@
 					<form class="search" action="#" method="post">
 						<div class="selected-date">
 							<label for="date-arrival">Дата заезда:</label>
-							<input id="date-arrival" type="text" name="date-arrival" value="24 апреля 2016">
+							<input id="date-arrival" type="text" name="date-arrival" value="24 апреля 2016" required>
 							<span class="calendar"></span>
 						</div>
 						<div class="selected-date">
 							<label for="date-departure">Дата выезда:</label>
-							<input id="date-departure" type="text" name="date-departure" value="24 июля 2016">
+							<input id="date-departure" type="text" name="date-departure" value="24 июля 2016" required>
 							<span class="calendar"></span>
 						</div>
 						<label for="number-adult">Взрослые:</label>
 						<div class="count-of-people">
 							<span class="number-minus qty-number"></span>
-							<input id="number-adult" type="number" name="number-adult" value="2">
+							<input id="number-adult" type="number" name="number-adult" value="2" required>
 							<span class="number-plus qty-number"></span>
 						</div>
 						<label for="number-children">Дети:</label>
 						<div class="count-of-people">
 							<span class="number-minus qty-number"></span>
-							<input id="number-children" type="number" name="number-children" value="0">
+							<input id="number-children" type="number" name="number-children" value="0" required>
 							<span class="number-plus qty-number"></span>
 						</div>
 						<input type="submit" value="Найти">
@@ -142,6 +142,6 @@
 			</section>
 		</footer>
 		<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript" defer></script>
-		<script src="js/script.js" defer></script>
+		<script src="js/script.min.js" defer></script>
 	</body>
 </html>
