Span вложен в label

--- a/index.html
+++ b/index.html
@@ -99,14 +99,12 @@
 					</div>
 					<form class="search" action="#" method="post">
 						<div class="selected-date">
-							<label for="date-arrival">Дата заезда:</label>
+							<label for="date-arrival">Дата заезда:<span class="calendar"></span></label>
 							<input id="date-arrival" type="text" name="date-arrival" value="24 апреля 2016" required>
-							<span class="calendar"></span>
 						</div>
 						<div class="selected-date">
-							<label for="date-departure">Дата выезда:</label>
+							<label for="date-departure">Дата выезда:<span class="calendar"></span></label>
 							<input id="date-departure" type="text" name="date-departure" value="24 июля 2016" required>
-							<span class="calendar"></span>
 						</div>
 						<label for="number-adult">Взрослые:</label>
 						<div class="count-of-people">
