Единообразное написание и форматирование кода в HTML

--- a/hotels.html
+++ b/hotels.html
@@ -20,7 +20,7 @@
 						</li>
 						<li class="logo">
 							<a href="index.html">
-								<img src="img/trigon-logo.png" width="138" height="70" alt="Логотип">
+								<img src="img/trigon-logo.png" alt="Логотип" width="138" height="70">
 							</a>
 						</li>
 						<li>
@@ -29,7 +29,7 @@
 						<li>
 							<a href="hotels.html" class="active">Гостиницы</a>
 						</li>
-						</ul>
+					</ul>
 				</nav>
 			</header>
 			<main class="container">
@@ -116,9 +116,9 @@
 								<div class="price-booking">
 									<p>От 3 500 р.</p>
 									<a href="#" class="brown-btn btn">Забронировать</a>
+								</div>
 							</div>
 						</div>
-					</div>
 					</div>
 					<div class="rating">
 						<div class="rating-star four-star"></div>
@@ -149,7 +149,7 @@
 				</article>
 				<article class="card-description">
 					<div class="card-hotel">
-							<img src="img/hotel-3.jpg" alt="Villas at Poco Diablo" width="135" height="90">
+						<img src="img/hotel-3.jpg" alt="Villas at Poco Diablo" width="135" height="90">
 						<div class="card-hotel-desc">
 							<h2 class="desc-top">Villas at Poco Diablo</h2>
 							<div class="desc-bottom">
