--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=cyrillic" rel="stylesheet">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=cyrillic">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/style.min.css">
 		<title>HTML Academy: Седона</title>
@@ -10,27 +10,27 @@
 	<body>
 		<div class="content">
 			<header class="main-header">
-					<nav class="main-navigation">
-						<ul>
-							<li>
-								<a href="#">Информация</a>
-							</li>
-							<li>
-								<a href="#">Фото и видео</a>
-							</li>
-							<li class="logo">
-								<a href="index.html">
-									<img src="img/trigon-logo.png" width="138" height="70" alt="Логотип">
-								</a>
-							</li>
-							<li>
-								<a href="#">Карта штата</a>
-							</li>
-							<li>
-								<a href="hotels.html">Гостиницы</a>
-							</li>
-							</ul>
-					</nav>
+				<nav class="main-navigation">
+					<ul>
+						<li>
+							<a href="#">Информация</a>
+						</li>
+						<li>
+							<a href="#">Фото и видео</a>
+						</li>
+						<li class="logo">
+							<a href="index.html">
+								<img src="img/trigon-logo.png" alt="Логотип" width="138" height="70">
+							</a>
+						</li>
+						<li>
+							<a href="#">Карта штата</a>
+						</li>
+						<li>
+							<a href="hotels.html">Гостиницы</a>
+						</li>
+					</ul>
+				</nav>
 			</header>
 			<main class="container">
 				<div class="sedona">
@@ -39,25 +39,25 @@
 					<p class="because">&#8220;Because the grand canyon sucks!&#8221;</p>
 				</div>
 				<div class="sedona-town">
-					<h2>Седона — небольшой городок в Фризоне, заслуживающий большего!</h2>
+					<h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
 					<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
 				</div>
 				<section class="benefits">
 					<div class="benefits-text">
 						<h3>Настоящий городок</h3>
 						<span class="number">№1</span>
-						<p>Седона - не аттракион для туристов, там течет своя жизнь</p>
+						<p>Седона - не аттракион для туристов, там&nbspтечет своя жизнь</p>
 					</div>
 					<div class="big-photo real-city"></div>
 				</section>
 				<section class="benefits">
 					<div class="benefits-text">
 						<h3 class="house">Жилье</h3>
-						<p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+						<p>Рекомендуем пожить в&nbspнастоящем мотеле, все как в кино!</p>
 					</div>
 					<div class="benefits-text">
 						<h3 class="food">Еда</h3>
-						<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+						<p>Всегда заказывайте фирменный бургер, вы&nbspне&nbspразочаруетесь!</p>
 					</div>
 					<div class="benefits-text">
 						<h3 class="souvenir">Сувениры</h3>
@@ -76,12 +76,12 @@
 					<div class="benefits-text">
 						<h3>Небольшая площадь</h3>
 						<span class="number">№3</span>
-						<p>Все достопримечательности находятся очень близко</p>
+						<p>Все достопримечательности находятся&nbspочень близко</p>
 					</div>
 					<div class="benefits-text">
 						<h3>Красивая дорога</h3>
 						<span class="number">№4</span>
-						<p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+						<p>Ехать в Седону из Лас&nbsp-&nbspВегаса совсем не&nbspскучно!</p>
 					</div>
 					<div class="benefits-text">
 						<h3>Мало туристов</h3>
