--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						</p>
 						<h3 class="search-btn">Поиск гостиницы в Седоне</h3>
 					</div>
-					<form class="search" action="#" method="post">
+					<form class="search" action="hotels.html" method="post">
 						<div class="selected-date">
 							<label for="date-arrival">Дата заезда:<span class="calendar"></span></label>
 							<input id="date-arrival" type="text" name="date-arrival" value="24 апреля 2016" required>
